modified image path

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <section>
     <div class="card">
-      <img src="../Order-Summary-Card/images/illustration-hero.svg" class="image-1" alt="hero">
+      <img src="./images/illustration-hero.svg" class="image-1" alt="hero">
       <div class="order-summary">
         <h1>Order Summary</h1>
         <p class="content">
           You can now listen to millions of songs,audiobooks, and podcasts on any device anywhere you like!
         </p>
         <figure>
-          <img src="../Order-Summary-Card/images/icon-music.svg" alt="music-icon" class="image-2">
+          <img src="./images/icon-music.svg" alt="music-icon" class="image-2">
           <figcaption>
             <div class="details">
               <h3>Annual Plan</h3>
